Fixes overlap glitch in social icons block in law template footer.

--- a/static/_files/css/style_2013.css
+++ b/static/_files/css/style_2013.css
@@ -2085,7 +2085,7 @@ a.infoFor-btn {
     }
     .footer-links-group.footer-social-icons > ul {
         padding-right: 0;
-        margin-top: 0;
+        margin-top: 6px;
     }
     .footer-links-group > li {
         padding: 0;
